# NoTUI

./: .gitignore  NoTUI.tcss  README.md  main.py  pyproject.toml
src/notui/: NoTUI.tcss  __init__.py  __main__.py  app.py
