[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "notui"
version = "0.1.0"
description = "A note taking terminal application"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
notui = "notui:main"

[tool.setuptools.package-data]
notui = ["*.tcss"]
